--- a/lmagent/build.gradle
+++ b/lmagent/build.gradle
@@ -15,9 +15,13 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
+
+	implementation 'com.github.Dannyj1:mistral-java-client:1.0.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
